#5651 [core] java 21