@@ -451,7 +451,7 @@ final class RuleSetFactory {
             err.at(xmlPlace).warn("Empty ref attribute");
             return null;
         }
-        return references.getFirst();
+        return references.get(0);
     }
 
     /**
@@ -541,7 +541,8 @@ final class RuleSetFactory {
         }
 
         if (warnDeprecated && referencedRule.isDeprecated()) {
-            if (referencedRule instanceof RuleReference ruleReference) {
+            if (referencedRule instanceof RuleReference) {
+                RuleReference ruleReference = (RuleReference) referencedRule;
                 err.at(ruleNode).warn(
                     "Use Rule name {0}/{1} instead of the deprecated Rule name {2}. PMD {3}"
                         + " will remove support for this deprecated Rule name usage.",
@@ -578,7 +579,8 @@ final class RuleSetFactory {
 
         if (withDeprecatedRuleReferences || !isSameRuleSet || !ruleReference.isDeprecated()) {
             Rule existingRule = ruleSetBuilder.getExistingRule(ruleReference);
-            if (existingRule instanceof RuleReference existingRuleReference) {
+            if (existingRule instanceof RuleReference) {
+                RuleReference existingRuleReference = (RuleReference) existingRule;
                 // the only valid use case is: the existing rule does not override anything yet
                 // which means, it is a plain reference. And the new reference overrides.
                 // for all other cases, we should log a warning
@@ -640,7 +642,7 @@ final class RuleSetFactory {
         if (ruleElement.hasAttribute("name")) {
             return ruleElement.getAttribute("name").equals(ruleName);
         } else if (ruleElement.hasAttribute("ref")) {
-            RuleSetReferenceId ruleSetReferenceId = RuleSetReferenceId.parse(ruleElement.getAttribute("ref")).getFirst();
+            RuleSetReferenceId ruleSetReferenceId = RuleSetReferenceId.parse(ruleElement.getAttribute("ref")).get(0);
             return ruleSetReferenceId.getRuleName() != null && ruleSetReferenceId.getRuleName().equals(ruleName);
         } else {
             return false;
